# JamQuest

./: .gitignore  Animation.cpp  Animation.hpp  CMakeLists.txt  CMakePresets.json  CMakePresets.json.bak  Camera2D.cpp  Camera2D.hpp  CompositionLayer.cpp  CompositionLayer.hpp  CursorCustodian.cpp  CursorCustodian.hpp  DEPENDS.md  DebugDrawer.cpp  DebugDrawer.hpp  Design_Notes.md  Entity.cpp  Entity.hpp  ImageLayer.cpp  ImageLayer.hpp  LICENSE  LayerGroup.cpp  LayerGroup.hpp  MapObject.cpp  MapObject.hpp  MotionState.cpp  MotionState.hpp  ObjectLayer.cpp  ObjectLayer.hpp  README.md  SdlApplication.cpp  SdlApplication.hpp  Shader.cpp  Shader.hpp  TileGridLayer.cpp  TileGridLayer.hpp  TiledMapRenderer.cpp  TiledMapRenderer.hpp  TmxExample.cpp  TmxExample.hpp  (+4 more)
include/: renderwindow.h
res/maps/: JamQuest.tiled-session  gameart2d-desert.tmx
src/: main.cpp  opengl_demo.cpp  player.cpp  renderwindow.cpp
tmx_sdl_example/: tmx_sdl_example.cpp
